# credit-risk-prediction

./: .gitignore  README.md  pyproject.toml
datasets/: README.md
notebooks/: 02-prediction-model.ipynb  03-automl.ipynb  credit-risk-prediction.ipynb
output/datasets/: credit_risk_model_ready.csv
output/models/perpetual/: perpetual_booster_risk_model.json
