[project]
name = "credit-risk-prediction"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Abdul Fathin Fawwaz", email = "abdulfathinfawwaz@gmail.com"},
]
dependencies = ["pandas>=2.3.1", "seaborn>=0.13.2", "matplotlib>=3.10.3", "ipykernel>=6.30.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
