[project]
name = "credit-risk-prediction"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Abdul Fathin Fawwaz", email = "abdulfathinfawwaz@gmail.com"},
]
dependencies = [
    "pandas>=2.0.0,<2.3.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.3",
    "ipykernel>=6.30.0",
    "scikit-learn>=1.0.0,<1.7.0",
    "xgboost>=3.0.2",
    "lightgbm>=4.6.0",
    "optuna>=4.4.0",
    "shap>=0.48.0",
    "numpy>=1.25.0,<2.1.4",
    "ipywidgets>=8.1.7",
    "perpetual>=0.9.5",
    "autogluon>=1.3.1"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
